Fix ion tabs spacing

--- a/src/common/theme.scss
+++ b/src/common/theme.scss
@@ -236,3 +236,7 @@ html.ios.plt-hybrid #status-bar-background {
   top: 0;
   z-index: 1000;
 }
+
+ion-segment-button ion-label {
+  padding: 0 15px;
+}
